# MyDCGAN

./: .gitignore  README.md  config.json  main.py  pyproject.toml
model/: loss.py  model.py
my_dcgan/: __main__.py
my_dcgan/trainer/: trainer.py
tests/: test_dataset.py  test_model.py
trainer/: trainer.py
